# DegixDAW

./: .env  .env.example  .gitignore  .npmrc  ANALYTICS_DEBUG_SESSION.md  CHANGELOG.md  CHAT_SIDEBAR_IMPROVEMENTS.md  CLAUDE.md  COMMIT_MESSAGE.txt  CONTINUE_TOMORROW.md  DEBUG_MODERATOR_ACCESS.md  DEBUG_SOCIAL.md  DEBUG_STORAGE.sql  DEPLOYMENT.md  DEPLOYMENT_COOLIFY.md  FIX_406_ERROR.sql  ISSUES.md  KNOWN_ISSUES.md  MONOREPO_MIGRATION.md  PROJECT_SUMMARY.md  PR_TEMPLATE_CHAT_SIDEBAR.md  Procfile  README.md  REFACTORING.md  REFACTORING_COMPLETE.md  SESSION_CONTEXT.md  SESSION_CONTINUE.md  SESSION_NOTES.md  STORAGE_SECURITY_MIGRATION.md  STYLES_MIGRATION_PLAN.md  SUPABASE_SETUP.md  TOKEN_MANAGEMENT.md  VERCEL_DEPLOYMENT.md  clean-toasts.sh  cleanup-standard.bat  cleanup-standard.ps1  fix_rls_policies.sql  index.html  jest.config.ts  netlify.toml  (+9 more)
.claude/: settings.local.json
.github/: TROUBLESHOOTING.md
.github/workflows/: ci.yml  daily-snapshot.yml
desktop/: DegixDAW-Desktop.vcxproj  README.md  compile.bat  run.bat
desktop/src/: main.cpp  storagedata.cpp  storagedata.h
docs/: ANALYTICS_SYSTEM.md  DATABASE_STATUS_REPORT.md  DEGIXDAW_MASTERPLAN.md  FILE_BROWSER.md  FILE_UPLOAD_SIZE_LIMIT.md  README.md  REFACTORING_AdminIssues.md  SESSION_SUMMARY_2025-10-18.md  SESSION_SUMMARY_FILE_UPLOAD_FIX_2025-10-18.md
docs/architecture/: 00_BIG_PICTURE.md  01_SYSTEM_OVERVIEW.md  02_DATABASE_SCHEMA.md  03_DATA_FLOW.md  04_STORAGE_STRATEGY.md  05_VST_PLUGIN.md  06_DEPLOYMENT.md
public/: _headers  _redirects
scripts/: check-admin-user.js  check-all-users.js  check-storage-buckets.js  claude-complete-issue.js  claude-start-issue.js  create-responsive-issue.json  createTestUsers.ts  fix-admin-user-id.sql  insert-test-issue.sql  list-all-issues.js  test-claude-api.js  test-code-metrics.mjs
scripts/analytics/: README.md  (+8 more)
server/: README.md  api.js
src/: App.tsx  index.css  main.tsx  setupTests.ts
supabase/: config.toml
vst/: CMakeLists.txt  README.md
vst/src/: config.h.example  main.cpp  storagedata.cpp  storagedata.h  test.cpp  types.h
vst/src/auth/: Auth.cpp  Auth.h
vst/src/gui/: FileBrowser.cpp  MainWindow.h
vst/src/util/: CredentialStorage.cpp  CredentialStorage.h  StringUtil.cpp  StringUtil.h
(+891 files in other folders)
